# yices-solver

./: README.md  pyproject.toml
.github/actions/build-yices/: action.yml
.github/actions/download-yices/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/test-binaries/: action.yml
.github/actions/verify-wheel/: action.yml
.github/workflows/: build-linux.yml  build-mac.yml  build-windows.yml  build.yml  release.yml
src/: _bootstrap.c
