[build-system]
requires = [
  "setuptools>=70",          # PEP 621 & inline extensions
  "setuptools_scm[toml]>=8", # version from git tags
  "wheel"                    # pip still calls this explicitly
]
build-backend = "setuptools.build_meta"

[project]
name            = "yices-solver"
dynamic         = ["version"]          # setuptools-scm paints this in
description     = "Platform-tagged wheels bundling the Yices 2 SMT solver (CLI + shared library)"
readme          = "README.md"
license         = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
  {name = "karmacoma", email = "karma@coma.lol"}
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows"
]

[tool.setuptools]
include-package-data = false  # we want data-files instead
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where   = ["."]
include = ["yices_solver*"]

[tool.setuptools.package-data]
yices_solver = [
  "lib/*",
]

[tool.setuptools.data-files]
"bin" = [
  "yices_solver/bin/yices",
  "yices_solver/bin/yices-smt2",
  "yices_solver/bin/yices-smt",
  "yices_solver/bin/yices-sat",
]

[tool.setuptools_scm]
# Tags are plain semantic-version strings like 2.6.5, 2.6.6-rc1, etc.
tag_regex     = "^(?P<version>\\d+\\.\\d+\\.\\d+(?:[.-]rc\\d+)?)$"
version_scheme = "no-guess-dev"
local_scheme   = "no-local-version"
